--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "^13.1.2"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "firebase": "^8.6.7"
   }
 }
