--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "firebase": "^8.6.7"
-
+    "firebase": "^8.6.7",
+    "firebase-admin": "^9.9.0"
   }
 }
