--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "alert": "^5.0.10",
     "dialogs": "^2.0.1",
     "electron-squirrel-startup": "^1.0.0",
+    "exceljs": "^4.2.1",
     "firebase": "^8.6.7",
     "firebase-admin": "^9.9.0"
   }
