--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^13.1.2"
+    
   },
   "dependencies": {
     "alert": "^5.0.10",
@@ -18,6 +18,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "exceljs": "^4.2.1",
     "firebase": "^8.6.7",
-    "firebase-admin": "^9.9.0"
+    "firebase-admin": "^9.9.0",
+    "electron": "^13.1.4"
   }
 }
