--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    
-  },
+  "devDependencies": {},
   "dependencies": {
     "alert": "^5.0.10",
     "dialogs": "^2.0.1",
