--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "tax",
+  "productName": "Tax app",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-win": "electron-packager . tax --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Tax app\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
+    "electron-packager": "^15.2.0",
+    "electron": "^13.1.4",
     "alert": "^5.0.10",
     "dialogs": "^2.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "exceljs": "^4.2.1",
     "firebase": "^8.6.7",
-    "firebase-admin": "^9.9.0",
-    "electron": "^13.1.4"
+    "firebase-admin": "^9.9.0"
   }
 }
