New Update: Autocomplete input

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "electron-packager": "^15.2.0",
-    "electron": "^13.1.4",
     "alert": "^5.0.10",
+    "autocomplete": "0.0.1",
+    "autocompleter": "^6.1.0",
     "dialogs": "^2.0.1",
+    "electron": "^13.1.4",
+    "electron-packager": "^15.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "exceljs": "^4.2.1",
     "firebase": "^8.6.7",
