--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "exceljs": "^4.2.1",
     "firebase": "^8.6.7",
-    "firebase-admin": "^9.9.0"
+    "firebase-admin": "^9.9.0",
+    "remote": "^0.2.6"
   }
 }
