--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.6.7",
     "firebase-admin": "^9.9.0",
+    "node-localstorage": "^2.2.1",
     "remote": "^0.2.6"
   }
 }
