--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package-win": "electron-packager . tax --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Tax app\""
+    "build": "electron-builder build --mac --win --publish never",
+    "deploy": "electron-builder build --mac --win --publish always"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +19,17 @@
     "autocompleter": "^6.1.0",
     "dialogs": "^2.0.1",
     "electron": "^13.1.4",
-    "electron-packager": "^15.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^4.3.9",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.6.7",
     "firebase-admin": "^9.9.0",
     "node-localstorage": "^2.2.1",
     "remote": "^0.2.6"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/svenriksen/tax.git"
   }
 }
