--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    
     "electron": "^13.5.1",
     "electron-builder": "^22.11.7"
   },
@@ -22,6 +21,7 @@
     "autocomplete": "0.0.1",
     "autocompleter": "^6.1.0",
     "dialogs": "^2.0.1",
+    "dotenv": "^10.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.9",
     "exceljs": "^4.2.1",
