--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-updater": "^4.3.9",
     "exceljs": "^4.2.1",
+    "express": "^4.17.1",
     "file-saver": "^2.0.5",
-    "firebase": "^8.6.7",
+    "firebase": "^8.10.0",
     "firebase-admin": "^9.9.0",
     "node-localstorage": "^2.2.1",
     "remote": "^0.2.6"
