New number display

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^8.10.0",
     "firebase-admin": "^9.9.0",
     "node-localstorage": "^2.2.1",
+    "numeral": "^2.0.6",
     "remote": "^0.2.6"
   },
   "repository": {
